# SPI-TFT-Screen-Project

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  devbox.json  makefile  parse_compile_commands_for_clang.py
debug/: openocd.cfg
docs/datasheets/: device-resource-links.txt
docs/notes/tft-display/: tft-display-notes.md
drivers/HAL/: CMakeLists.txt  stm32l4xx_hal_def.h  stm32l4xx_it.c  stm32l4xx_it.h
drivers/LL/: CMakeLists.txt
src/app/: CMakeLists.txt  main.c
src/app/LED/: LED.c  LED.h  LED_types.h
src/app/TFT-display/display-driver/: ILI9341_commands.h  ILI9341_regs.h
src/app/TFT-display/touch-screen-driver/: FT6206_driver.c  FT6206_driver.h  FT6206_types.h  TFT_touch_screen_driver_regs.h
src/app/application/: application.c  application.h
src/app/config/: FreeRTOSConfig.h  stm32l4xx_hal_conf.h
src/app/gpio/: gpio_types.h
src/app/system/clock/: clock.c  clock.h
src/app/temp-sensor-driver/: MCP9808_regs.h
src/app/temp-sensor/driver/: MCP9808_driver.c  MCP9808_driver.h  MCP9808_regs.h  MCP9808_types.h  temp_sensor_driver_types.h
src/app/temp-sensor/manager/: temp_sensor_manager.c  temp_sensor_manager.h
src/app/temp-sensor/module/: temp_sensor_module.c  temp_sensor_module.h
src/app/utility/: assert.c  assert.h  utility.c  utility.h
src/debug/: CMakeLists.txt
startup/: startup_stm32l476xx.s
toolchain/: OverrideBuildTypeSettings.cmake
toolchain/cross/: STM32L476RG.cmake  arm-none-eabi-gcc.cmake  cortex-m4f.cmake
tools/: devbox.mk  git_version.cmake
